<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_consultations"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_consultations" />
        <item
            android:id="@+id/nav_add_consultation"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/nav_add_consultation" />
        <item
            android:id="@+id/nav_add_patient"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_add_patient" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_search" />
    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/nav_logout" />
    </group>
</menu>

