<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_consultations">

    <fragment
        android:id="@+id/nav_consultations"
        android:name="com.example.myapplication.view.ConsultationListFragment"
        android:label="@string/nav_consultations"
        tools:layout="@layout/fragment_consultation_list">
        <action
            android:id="@+id/action_nav_consultations_to_nav_update_consultation"
            app:destination="@id/nav_update_consultation" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_consultation"
        android:name="com.example.myapplication.view.AddConsultationFragment"
        android:label="@string/nav_add_consultation"
        tools:layout="@layout/fragment_add_consultation" />

    <fragment
        android:id="@+id/nav_add_patient"
        android:name="com.example.myapplication.view.AddPatientFragment"
        android:label="@string/nav_add_patient"
        tools:layout="@layout/fragment_add_patient" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.myapplication.view.SearchConsultationsFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search_consultations">
        <action
            android:id="@+id/action_nav_search_to_nav_update_consultation"
            app:destination="@id/nav_update_consultation" />
    </fragment>

    <fragment
        android:id="@+id/nav_update_consultation"
        android:name="com.example.myapplication.view.UpdateConsultationFragment"
        android:label="@string/update_consultation_title"
        tools:layout="@layout/fragment_update_consultation" />

</navigation>

