<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/time_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/editPatientSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/consultation_reason_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editReasonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="3" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
